Form Elements Updated

--- a/css/components/input.css
+++ b/css/components/input.css
@@ -442,7 +442,7 @@ select::-ms-expand {
 
 select {
   flex: 1;
-  padding: 0 .5em;
+  padding: 0 10px;
   color: var(--grey90);
   cursor: pointer;
 }
@@ -452,7 +452,7 @@ select {
   position: absolute;
   top: 0;
   right: 0;
-  padding: 0 1em;
+  padding: 0 10px;
   background: var(--grey60);
   cursor: pointer;
   pointer-events: none;
@@ -465,6 +465,71 @@ select {
 .select:hover::after {
   background: var(--mad-red);
 }
+
+.multi-select .button{
+  position: relative;
+  border: none;
+  background: var(--grey30);
+  color: var(--grey90);
+  font-size: 14px;
+  margin: 10px 0;
+  padding: 1px 10px;
+  width: 100%;
+  height: 40px;
+  text-align: left;
+  cursor: pointer;
+  overflow: hidden;
+  box-shadow: none;
+}
+
+.multi-select .button:hover{
+  box-shadow: none;
+}
+
+.multi-select .dropdown-toggle::after{ display: none; }
+
+.multi-select-options{
+  background: var(--white) !important;
+  border: thin solid var(--grey50) !important;
+  min-width: 250px;
+  margin: auto;
+  border-radius: 0;
+  padding: 10px;
+  cursor: pointer;
+  min-height: 100px;
+  max-height: 250px;
+  overflow-y: scroll;
+}
+
+.multi-select .badge.selected-options{
+  padding: 5px 0 5px 5px;
+  border-radius: 0px;
+  margin-left: 2px;
+  background: var(--grey90);
+  color: var(--white);
+}
+
+.multi-select .badge.selected-options .icon{ font-size: inherit; }
+.multi-select .badge.selected-options .icon.remove-option{ padding: 3px 5px;}
+.multi-select .badge.selected-options .icon.remove-option:hover{ background: var(--grey70); }
+.multi-select-options .options{ padding: 4px 8px; }
+.multi-select-options .options.active{ background: var(--cyan); }
+
+.multi-select-options .options label{
+  font-size: 15px;
+  position: relative;
+}
+
+.multi-select-options .dropdown-item{
+  padding: 5px 15px;
+  font-size: 13px;
+}
+
+.multi-select-options .dropdown-item .checkbox{
+  margin: 0;
+}
+
+.multi-select-options .dropdown-item:hover{ background: var(--white); }
 
 @media (max-width:500px){
   .select {
