--- a/css/components/forms.css
+++ b/css/components/forms.css
@@ -56,6 +56,7 @@
   text-align: left !important;
   line-height: 1.4;
   font-size: 15px;
+  margin-bottom: 0px;
 }
 
 .mform p.form-label.link{
@@ -116,7 +117,7 @@
 
 /*Hide all except first fieldset*/
 .mform fieldset:not(:first-of-type) {
-    display: none;
+    /* display: none; */
 }
 
 .mform input.checkbox{
