--- a/templates/plan/css/components/icon.css
+++ b/templates/plan/css/components/icon.css
@@ -1,3 +1,3 @@
-.icon{  
-  padding: 4px;
-}
+.icon{ padding: 4px; }
+.card-marker i.icon { font-size: 20px; }
+.sidebar-toggle i.icon {font-size: 20px;}
