--- a/templates/plan/css/components/layout.css
+++ b/templates/plan/css/components/layout.css
@@ -1,12 +1,12 @@
-.dark .elements {
-  background: var(--grey90);
-  color: var(--white);
-}
+.fixed-left{ width: 300px; float: left;   height: 100vh; }
+.fixed-right{ width: calc(100% - 300px); float: right; overflow: scroll; height: 100vh; }
 
-.light .elements {
-  background: var(--grey30);
-  color: var(--grey80);
-}
+.fixed-left.collapsed{ width: 100px; float: left;   height: 100vh; }
+.fixed-right.collapsed { width: calc(100% - 100px); loat: right; overflow: scroll; height: 100vh; }
+
+
+.dark .elements {background: var(--grey90);color: var(--white);}
+.light .elements {background: var(--grey30); color: var(--grey80);}
 
 /* Flex Container  */
 .flex-container{
@@ -21,15 +21,86 @@
 .center { text-align: center !important; }
 .no-margin { margin: 0px !important; }
 
+.panel .col{ padding: 0 0 0 20px;}  
+/* TODO: Update the Padding for Col  */
+.panel-component {margin-bottom: 20px;}
 /* Box for Key Progress Indicators kpi-box  */
-.kpi-box { padding: 0 0 0 20px;}
-.kpi-box:last-child{ padding: 0 20px 0 20px;}
+/* .kpi-box { padding: 0 0 0 20px; } */
+/* .kpi-box:last-child{ padding: 0 20px 0 20px;} */
 .kpi-box .data{
   width: 100%;
   padding: 10px;
   height: 100px;
   border-radius: 5px;
+  color: var(--white);
   background: #485563;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #29323c, #485563);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #29323c, #485563); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+
+
+/* Card Styling for Planner UI  */
+.card{
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+.card .row{ margin-left: 0px; }
+
+.card{
+  border: thin solid #CCC;  
+  background: var(--white);
+  color: var(--black);
+}
+
+.card-marker{
+  display: flex;
+  justify-content: center;
+  align-items: center;  
+  text-align: center;  
+}
+
+.card.light{
+  background: var(--white);
+  color: var(--black);
+}
+
+.card.dark{
+  background: var(--grey80);
+  color:var(--white);
+}
+
+.card-body.task-item{
+  padding-left: 0px;
+}
+
+/* Container which holds the information for Today's Task */
+.dashboard-container, .today-container{ 
+  padding: 20px; 
+  height: calc(100vh - 50px);   
+  overflow-y: scroll;
+}
+
+.today-container { 
+  background-color: #2b4162;
+  background-image: linear-gradient(315deg, #2b4162 0%, #12100e 74%);
+}
+
+.dashboard-container { 
+  background-color: #0d0a0b;
+  background-image: linear-gradient(315deg, #0d0a0b 0%, #009fc2 74%);
+}
+
+.panel{ padding-right: 15px; padding-left: 15px; color: var(--white) }
+.project-container{ padding-bottom: 20px;}
+.project-item-header{ padding: 10px; border-radius: 5px; margin-bottom: 5px; }
+.project-item{ padding: 10px; border-radius: 5px; background: var(--blue-grey90); margin-bottom: 5px;}
+.project-members{ height: 30px; overflow-y: scroll}
+.project-members .members-image{ width: 30px; height: 30px; float:left; border-radius: 100%; margin-right: 2px; overflow: hidden; }
+.project-members .members-image .img{ width: 100%; }
+p.project-teams{ margin-bottom: 2px;}
+
+@media (max-width: 500px){
+  .fixed-left, .fixed-left.collapsed{ width: 100px; float: left;   height: 100vh; }
+  .fixed-right, .fixed-right.collapsed{ width: calc(100% - 100px); loat: right; overflow: scroll; height: 100vh; }
 }
