--- a/templates/plan/css/components/navbar.css
+++ b/templates/plan/css/components/navbar.css
@@ -1,18 +1,6 @@
 /* General Setting Applicable for All Themes */
 
-.fixed-left{ width: 300px; float: left;   height: 100vh; }
-.fixed-right{ width: calc(100% - 300px); float: right; overflow: scroll; height: 100vh; }
-
-.fixed-left.collapsed{ width: 100px; float: left;   height: 100vh; }
-.fixed-right.collapsed { width: calc(100% - 100px); loat: right; overflow: scroll; height: 100vh; }
-
-.navbar{
-  position: sticky;
-  width: 100%;
-  margin-bottom: 20px;
-  padding: 5px 10px;
-}
-
+.navbar{ position: sticky; width: 100%; padding: 5px 10px; }
 .navbar-toggler{ border: none; }
 
 .profile_image{
@@ -25,13 +13,14 @@
   overflow: hidden;
   background: url("https://picsum.photos/seed/picsum/40/40");
 }
+
 .profile_image.collapsed{width: 50px; height: 50px; margin-top: 40px;}
 .profile_image img{ width: 100%; }
 .user_name{text-align: center; color: var(--white); margin-bottom: 0px;}
 .user_profile{font-size: 10px; margin-top: 0px; font-style: italic; overflow-x: hidden; text-align: center; color: var(--grey20)}
 
 .dropdown-menu{border: none;}
-
+.dropdown-menu.right{ left: auto; right: 0;}
 
 /* Sidebar CSS Styling */
 
@@ -61,15 +50,23 @@
   cursor: pointer;
 }
 
-.sidebar.collapsed{width: 100px; overflow: hidden;}
+.sidebar .sidebar-dropdown{
+  position: static;
+  float: none;
+  top: auto;
+  left: 0;
+  background: none;
+}
+
+.sidebar .sidebar-dropdown a.dropdown-item{ padding: 0 0 0 10px; font-size: 14px; color: var(--white); line-height: 2; }
+
+.sidebar.collapsed{ width: 100px; overflow: hidden; }
 .sidebar.collapsed .collapsable{ display: none; }
+
 .sidebar.top-left{ top: 0px; left: 0px; }
 .sidebar.top-right{ top: 0px; right: 0px; }
-
-/* .navbar span.user_profile:hover{
-  max-height: 60px;
-  max-width: auto;
-} */
+.collapsed .nav ul li::after{ height: 0px; }
+.collapsed .nav ul li a i.icon{ font-size: 25px; padding: 0px }
 
 /* Dark Theme Elements Styling--------------------------------------------------------------------- */
 .dark .navbar, .night .navbar{
@@ -90,21 +87,10 @@
   color: var(--white);
 }
 
-.dark span.user_name{
-  color: var(--white);
-}
-
-.dark .dropdown-menu{
-  background: var(--grey70);
-}
-
-.dark .dropdown-item{
-  color: var(--white);
-}
-
-.dark .navbar span.user_profile{
-  color: var(--grey10);
-}
+.dark span.user_name{ color: var(--white); }
+.dark .navbar .dropdown-menu{ background: var(--grey70); }
+.dark .navbar .dropdown-item{ color: var(--white); }
+.dark .navbar span.user_profile{ color: var(--grey10); }
 
 .dark .navbar a{
   color: var(--white);
@@ -153,9 +139,13 @@
 
 /* .dark .sidebar{ background: var(--teal80);} */
 /* .dark .sidebar{ background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%); } */
-.dark .sidebar{ background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 100%); }
-.dark .sidebar { background-image: linear-gradient(to top, #09203f 0%, #537895 100%); }
-.dark .sidebar { background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%); }
+/* .dark .sidebar { background-image: linear-gradient( 135deg, #FD6585 10%, #0D25B9 100%); } */
+/* .dark .sidebar { background-image: linear-gradient(to top, #09203f 0%, #537895 100%); } */
+/* .dark .sidebar { background-image: linear-gradient(to top, #1e3c72 0%, #1e3c72 1%, #2a5298 100%); } */
+.dark .sidebar { 
+  background-color: #2b4162;
+  background-image: linear-gradient(180deg, #2b4162 10%, #12100e 54%);
+}
 
 .nav ul {
   list-style: none;
@@ -200,23 +190,21 @@
   background: var(--white);
 }
 
-.nav-tabs{
-  border-bottom: 1px solid var(--cyan70);
-}
-
-.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link{
-  background: var(--cyan70);
+.nav-tabs{ border-bottom: 1px solid var(--cyan70); }
+.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link{  
+  background: none;
   color: var(--white);
-  border: thin solid var(--cyan70);
+  border: none;
+  border-bottom: 2px solid var(--white);
 }
 
-.nav-tabs .nav-link:hover{
-  border: thin solid var(--cyan70);
-  /* color: var(--cyan70); */
-}
+.nav-tabs .nav-link:hover {
+  border: none;
+  border-bottom: 2px solid var(--white);  
+} 
 
 .tab-content{
-  padding: 15px;
+  padding: 15px 0 0 15px;
   border-left: thin solid var(--cyan70);
   margin-bottom: 20px;
 }
@@ -238,4 +226,10 @@
     width: 60px;
     z-index: 10;
   }
+  .sidebar, .sidebar.collapsed{width: 100px; overflow: hidden;}
+  .sidebar .collapsable, .sidebar.collapsed .collapsable{ display: none; }
+  .sidebar .nav ul li::after{ height: 0px; }  
+  .sidebar .nav ul li a i.icon{ font-size: 25px; padding: 0px }
+  .profile_image{width: 50px; height: 50px; margin-top: 40px;}
 }
+
