--- a/templates/plan/css/components/text.css
+++ b/templates/plan/css/components/text.css
@@ -1,36 +1,16 @@
-h1{
-  font-size: 30px;
-  font-weight: bold;
-}
-
-h2{
-  font-size: 25px;
-}
-
-h3{
-  font-size: 18px;
-}
-
-h4{
-  font-size: 15px;
-}
-
+h1{ font-size: 30px; font-weight: bold; }
+h2{ font-size: 25px; }
+h3{ font-size: 18px; }
+h4{ font-size: 15px; }
 p{
 
 }
 
-a{
-  color: var(--cyan);
-}
+p.task-time { font-size: 10px; margin-bottom: 0px;}
 
-a:hover{
-  color: var(--cyan70);
-  text-decoration: none;
-}
-
-a.visited{
-  color: var(--cyan70);
-}
+a{ color: var(--cyan); }
+a:hover{ color: var(--cyan70); text-decoration: none;}
+a.visited{ color: var(--cyan70);}
 
 /* mainheadings*/
 .main-title {
@@ -43,16 +23,6 @@ a.visited{
 }
 
 /*headings*/
-.title {
-  text-transform: uppercase;
-  margin-bottom: 10px;
-  color: var(--grey90);
-  letter-spacing: 2px;
-  font-weight: bold;
-}
-
-.subtitle {
-  font-weight: normal;
-  margin-bottom: 10px;
-  color: var(--grey70);
-}
+.title { text-transform: uppercase; margin-bottom: 10px; color: var(--grey90); letter-spacing: 2px; font-weight: bold; }
+.subtitle { font-weight: normal; margin-bottom: 10px; color: var(--grey70); }
+.kpi-data {font-size: 40px;}
