--- a/css/components/input.css
+++ b/css/components/input.css
@@ -473,7 +473,7 @@ select {
   color: var(--grey90);
   font-size: 14px;
   margin: 10px 0;
-  padding: 1px 10px;
+  padding: 10px;
   width: 100%;
   height: 40px;
   text-align: left;
